objects/vlocity_ins__ObjectFieldAttribute__c.object
<CustomObject>
    <description>Represents the association of a field or attribute to an object or object type. Identifies the fields and attributes applicable to the given object or object type.</description>
    <fields>
        <fullName>vlocity_ins__AttributeCategoryId__c</fullName>
        <formula>vlocity_ins__AttributeId__r.vlocity_ins__AttributeCategoryId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Attribute</label>
        <referenceTo>vlocity_ins__Attribute__c</referenceTo>
        <relationshipName>ObjectFieldAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FieldApiName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this object field attribute. Used to identify the object field attribute across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique object field attribute identifier can be used.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectClassId__c</fullName>
        <label>Vlocity Object Class</label>
        <referenceTo>vlocity_ins__ObjectClass__c</referenceTo>
        <relationshipLabel>Vlocity Object Field Attributes</relationshipLabel>
        <relationshipName>ObjectFieldAttributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubclassId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subclass</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Object Field Attribute</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__FieldApiName__c</columns>
        <columns>vlocity_ins__AttributeId__c</columns>
        <columns>vlocity_ins__ObjectType__c</columns>
        <columns>vlocity_ins__SubclassId__c</columns>
        <columns>vlocity_ins__ObjectClassId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Field Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Object Field Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>